--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql": "github:mysqljs/mysql",
+    "nodemailer": "^6.4.16",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
